force-app/main/default/objects/Noncredit_Invoice__c/Noncredit_Invoice__c.object-meta.xml
<CustomObject>
    <label>Noncredit Invoice</label>
    <nameField>
        <displayFormat>INV-{0000}</displayFormat>
        <label>Noncredit Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Noncredit Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>