force-app/main/default/objects/Noncredit_Invoice__c/fields/Actual_LMS_Fulfilled_Count__c.field-meta.xml
<CustomField>
    <fullName>Actual_LMS_Fulfilled_Count__c</fullName>
    <description>Count of LMS Enrollments that are fulfilled.</description>
    <inlineHelpText>Count of LMS Enrollments that are fulfilled.</inlineHelpText>
    <label>Actual LMS Fulfilled Count</label>
    <summaryFilterItems>
        <field>Noncredit_Invoice_Line_Item__c.Requires_LMS_Fulfillment__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Noncredit_Invoice_Line_Item__c.Is_Fulfilled__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Noncredit_Invoice_Line_Item__c.Noncredit_Invoice__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>