force-app/main/default/objects/Noncredit_Invoice__c/fields/Actual_Paid__c.field-meta.xml
<CustomField>
    <fullName>Actual_Paid__c</fullName>
    <description>Credit is not a transfer.</description>
    <inlineHelpText>Credit is not a transfer.</inlineHelpText>
    <label>Actual Paid</label>
    <summarizedField>Noncredit_Invoice_Payment__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Noncredit_Invoice_Payment__c.Is_Actual__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Noncredit_Invoice_Payment__c.Noncredit_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>