force-app/main/default/objects/Noncredit_Invoice__c/fields/Actual_Total__c.field-meta.xml
<CustomField>
    <fullName>Actual_Total__c</fullName>
    <description>Total of debits that are not transferred.</description>
    <inlineHelpText>Total of debits that are not transferred.</inlineHelpText>
    <label>Actual Total</label>
    <summarizedField>Noncredit_Invoice_Line_Item__c.Line_Item_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Noncredit_Invoice_Line_Item__c.Is_Actual__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Noncredit_Invoice_Line_Item__c.Noncredit_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>