force-app/main/default/objects/Noncredit_Invoice__c/fields/Cancel_At__c.field-meta.xml
<CustomField>
    <fullName>Cancel_At__c</fullName>
    <description>If cancellation is in progress - date of expiration here.</description>
    <inlineHelpText>If cancellation is in progress - date of expiration here.</inlineHelpText>
    <label>Cancel At</label>
    <type>Date</type>
</CustomField>