force-app/main/default/objects/Noncredit_Invoice__c/fields/Cancel_in_Progress__c.field-meta.xml
<CustomField>
    <fullName>Cancel_in_Progress__c</fullName>
    <description>True if cancel date is set but has not passed.</description>
    <formula>NOT(ISBLANK(Cancel_At__c))&amp;&amp;TODAY()&lt;Cancel_At__c&amp;&amp;Total_Paid__c==0&amp;&amp;NOT( Is_Cancelled__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>True if cancel date is set but has not passed.</inlineHelpText>
    <label>Cancel in Progress</label>
    <type>Checkbox</type>
</CustomField>