force-app/main/default/objects/Noncredit_Invoice__c/fields/Cancel_Requested__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Requested__c</fullName>
    <description>If this is checked, invoice will be cancelled at midnight.</description>
    <formula>NOT(ISBLANK(Cancel_At__c))&amp;&amp;TODAY()&gt;=Cancel_At__c&amp;&amp;Total_Paid__c==0&amp;&amp;NOT( Is_Cancelled__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If this is checked, invoice will be cancelled at midnight.</inlineHelpText>
    <label>Cancel Requested</label>
    <type>Checkbox</type>
</CustomField>