force-app/main/default/objects/Noncredit_Invoice__c/fields/Confirmed_Line_Item_Count__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Line_Item_Count__c</fullName>
    <label>Confirmed Line Item Count</label>
    <summaryFilterItems>
        <field>Noncredit_Invoice_Line_Item__c.Is_Confirmed__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Noncredit_Invoice_Line_Item__c.Noncredit_Invoice__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>