force-app/main/default/objects/Noncredit_Invoice__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person on the invoice.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Noncredit Invoices</relationshipLabel>
    <relationshipName>Noncredit_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>