force-app/main/default/objects/Noncredit_Invoice__c/fields/Escalate_Automatically__c.field-meta.xml
<CustomField>
    <fullName>Escalate_Automatically__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If true, automatically send out the escalation email.</description>
    <inlineHelpText>If true, automatically send out the escalation email.</inlineHelpText>
    <label>Escalate Automatically</label>
    <type>Checkbox</type>
</CustomField>