force-app/main/default/objects/Noncredit_Invoice__c/fields/Escalation_Sent__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if payment escalation email has been sent.</description>
    <inlineHelpText>Checked if payment escalation email has been sent.</inlineHelpText>
    <label>Escalation Sent</label>
    <type>Checkbox</type>
</CustomField>