force-app/main/default/objects/Noncredit_Invoice__c/fields/Failed_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Failed_Payment_Amount__c</fullName>
    <description>The sum of payments made that were declined / failed to process.</description>
    <inlineHelpText>The sum of payments made that were declined / failed to process.</inlineHelpText>
    <label>Failed Payment Amount</label>
    <summarizedField>Noncredit_Invoice_Payment__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Noncredit_Invoice_Payment__c.Successful__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Noncredit_Invoice_Payment__c.Noncredit_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>