force-app/main/default/objects/Noncredit_Invoice__c/fields/Fulfilled_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Fulfilled_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if a csuoee__Marketing_Cloud_Journey_Event__c has been created for this invoice.</description>
    <inlineHelpText>True if a csuoee__Marketing_Cloud_Journey_Event__c has been created for this invoice.</inlineHelpText>
    <label>Fulfilled Email Sent</label>
    <type>Checkbox</type>
</CustomField>