force-app/main/default/objects/Noncredit_Invoice__c/fields/Has_Failed_Payments__c.field-meta.xml
<CustomField>
    <fullName>Has_Failed_Payments__c</fullName>
    <description>True if a payment on this invoice is marked unsuccessful.</description>
    <formula>Failed_Payment_Amount__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>True if a payment on this invoice is marked unsuccessful.</inlineHelpText>
    <label>Has Failed Payments</label>
    <type>Checkbox</type>
</CustomField>