force-app/main/default/objects/Noncredit_Invoice__c/fields/Has_Open_Entry__c.field-meta.xml
<CustomField>
    <fullName>Has_Open_Entry__c</fullName>
    <description>True if any open entry line items are on the invoice.</description>
    <formula>Open_Entry_Line_Item_Count__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>True if any open entry line items are on the invoice.</inlineHelpText>
    <label>Has Open Entry</label>
    <type>Checkbox</type>
</CustomField>