force-app/main/default/objects/Noncredit_Invoice__c/fields/Intended_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Intended_Payment_Method__c</fullName>
    <description>Radio choice at checkout for how the invoice will be paid.</description>
    <inlineHelpText>Radio choice at checkout for how the invoice will be paid.</inlineHelpText>
    <label>Intended Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unspecified</fullName>
                <default>true</default>
                <label>Unspecified</label>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Sponsor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>