force-app/main/default/objects/Noncredit_Invoice__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <description>Opus Invoice Number.</description>
    <externalId>true</externalId>
    <inlineHelpText>Opus Invoice Number.</inlineHelpText>
    <label>Invoice Number</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>