force-app/main/default/objects/Noncredit_Invoice__c/fields/Is_All_F2F__c.field-meta.xml
<CustomField>
    <fullName>Is_All_F2F__c</fullName>
    <description>True if Canvas is not required for this invoice.</description>
    <formula>LMS_Fulfillment_Required_Count__c = 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>True if Canvas is not required for this invoice.</inlineHelpText>
    <label>Is All F2F</label>
    <type>Checkbox</type>
</CustomField>