force-app/main/default/objects/Noncredit_Invoice__c/fields/Is_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Is_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set true if this invoice should be ignored e.g. is a duplicate or something.</description>
    <inlineHelpText>Set true if this invoice should be ignored e.g. is a duplicate or something.</inlineHelpText>
    <label>Is Cancelled</label>
    <type>Checkbox</type>
</CustomField>