force-app/main/default/objects/Noncredit_Invoice__c/fields/Is_Completely_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Is_Completely_Confirmed__c</fullName>
    <formula>Confirmed_Line_Item_Count__c=Line_Item_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Completely Confirmed</label>
    <type>Checkbox</type>
</CustomField>