force-app/main/default/objects/Noncredit_Invoice__c/fields/Is_Completely_Fulfilled__c.field-meta.xml
<CustomField>
    <fullName>Is_Completely_Fulfilled__c</fullName>
    <description>Returns true if all required LMS enrollments are fulfilled.</description>
    <formula>LMS_Fulfillment_Required_Count__c = Actual_LMS_Fulfilled_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Returns true if all required LMS enrollments are fulfilled.</inlineHelpText>
    <label>Is Completely Fulfilled</label>
    <type>Checkbox</type>
</CustomField>