force-app/main/default/objects/Noncredit_Invoice__c/fields/Is_Noncredit_Only__c.field-meta.xml
<CustomField>
    <fullName>Is_Noncredit_Only__c</fullName>
    <description>True if only noncredit line items.</description>
    <formula>Credit_Line_Item_Count__c = 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>True if only noncredit line items.</inlineHelpText>
    <label>Is Noncredit Only</label>
    <type>Checkbox</type>
</CustomField>