force-app/main/default/objects/Noncredit_Invoice__c/fields/Is_Paid__c.field-meta.xml
<CustomField>
    <fullName>Is_Paid__c</fullName>
    <description>Marked &quot;Paid&quot; if Payments Amount = Total Amount.</description>
    <formula>( Total_Amount__c + Total_Paid__c ) &gt;= 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Marked &quot;Paid&quot; if Payments Amount = Total Amount.</inlineHelpText>
    <label>Is Paid</label>
    <type>Checkbox</type>
</CustomField>