force-app/main/default/objects/Noncredit_Invoice__c/fields/Is_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Is_Sponsor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Definitive checkbox for if an invoice belongs to a sponsor.</description>
    <inlineHelpText>Definitive checkbox for if an invoice belongs to a sponsor.</inlineHelpText>
    <label>Is Sponsor</label>
    <type>Checkbox</type>
</CustomField>