force-app/main/default/objects/Noncredit_Invoice__c/fields/Is_Sponsor_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Is_Sponsor_Invoice__c</fullName>
    <description>Computed Boolean column for if a sponsor is set on this Invoice.</description>
    <formula>Payer_Account__r.RecordType.DeveloperName = &quot;Business_Organization&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Computed Boolean column for if a sponsor is set on this Invoice.</inlineHelpText>
    <label>Is Sponsor Invoice</label>
    <type>Checkbox</type>
</CustomField>