force-app/main/default/objects/Noncredit_Invoice__c/fields/LMS_Fulfillment_Required_Count__c.field-meta.xml
<CustomField>
    <fullName>LMS_Fulfillment_Required_Count__c</fullName>
    <description>Count of line items that require LMS fulfillment.</description>
    <inlineHelpText>Count of line items that require LMS fulfillment.</inlineHelpText>
    <label>LMS Fulfillment Required Count</label>
    <summaryFilterItems>
        <field>Noncredit_Invoice_Line_Item__c.Requires_LMS_Fulfillment__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Noncredit_Invoice_Line_Item__c.Noncredit_Invoice__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>