force-app/main/default/objects/Noncredit_Invoice__c/fields/Noncredit_ID__c.field-meta.xml
<CustomField>
    <fullName>Noncredit_ID__c</fullName>
    <description>ID Field - can lookup for Contact.</description>
    <externalId>true</externalId>
    <inlineHelpText>ID Field - can lookup for Contact.</inlineHelpText>
    <label>Opus ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>