force-app/main/default/objects/Noncredit_Invoice__c/fields/Open_Entry_Line_Item_Count__c.field-meta.xml
<CustomField>
    <fullName>Open_Entry_Line_Item_Count__c</fullName>
    <description># of line items that are open entry.</description>
    <inlineHelpText># of line items that are open entry.</inlineHelpText>
    <label>Open Entry Line Item Count</label>
    <summaryFilterItems>
        <field>Noncredit_Invoice_Line_Item__c.Is_Open_Entry_Line_Item__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Noncredit_Invoice_Line_Item__c.Noncredit_Invoice__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>