force-app/main/default/objects/Noncredit_Invoice__c/fields/Payer_Account__c.field-meta.xml
<CustomField>
    <fullName>Payer_Account__c</fullName>
    <description>The account that is making payments on this invoice.</description>
    <label>Payer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Noncredit Invoices (Payer Account)</relationshipLabel>
    <relationshipName>Noncredit_Invoices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>