force-app/main/default/objects/Noncredit_Invoice__c/fields/Registration_Id__c.field-meta.xml
<CustomField>
    <fullName>Registration_Id__c</fullName>
    <externalId>true</externalId>
    <label>Registration Id</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>