force-app/main/default/objects/Noncredit_Invoice__c/fields/Registration_Method__c.field-meta.xml
<CustomField>
    <fullName>Registration_Method__c</fullName>
    <description>Registration Method in Opus.</description>
    <inlineHelpText>Registration Method in Opus.</inlineHelpText>
    <label>Registration Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Online - Credit Card</fullName>
            </value>
            <value>
                <fullName>Online - Sponsor</fullName>
            </value>
            <value>
                <fullName>Online - Check</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>In-Person</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Other/Undetermined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>