force-app/main/default/objects/Noncredit_Invoice__c/fields/Send_Confirmation_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Confirmation_Email__c</fullName>
    <defaultValue>true</defaultValue>
    <description>True if a confirmation email should send. Overrides should occur on classes like HSLL.</description>
    <inlineHelpText>True if a confirmation email should send. Overrides should occur on classes like HSLL.</inlineHelpText>
    <label>Send Confirmation Email?</label>
    <type>Checkbox</type>
</CustomField>