force-app/main/default/objects/Noncredit_Invoice__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <description>Total Invoice Amount.</description>
    <inlineHelpText>Total Invoice Amount.</inlineHelpText>
    <label>Total Amount</label>
    <summarizedField>Noncredit_Invoice_Line_Item__c.Line_Item_Amount__c</summarizedField>
    <summaryForeignKey>Noncredit_Invoice_Line_Item__c.Noncredit_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>