force-app/main/default/objects/Noncredit_Invoice__c/fields/Total_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_Paid__c</fullName>
    <description>Total Amount Paid.</description>
    <inlineHelpText>Total Amount Paid.</inlineHelpText>
    <label>Total Paid</label>
    <summarizedField>Noncredit_Invoice_Payment__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Noncredit_Invoice_Payment__c.Successful__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Noncredit_Invoice_Payment__c.Noncredit_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>