force-app/main/default/objects/Noncredit_Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Registration_Method__c</columns>
    <columns>Is_Paid__c</columns>
    <columns>Actual_Total__c</columns>
    <columns>Actual_Paid__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>