force-app/main/default/objects/Noncredit_Invoice__c/listViews/Invoices_Requiring_Fulfillment.listView-meta.xml
<ListView>
    <fullName>Invoices_Requiring_Fulfillment</fullName>
    <columns>Contact__c</columns>
    <columns>NAME</columns>
    <columns>Invoice_Number__c</columns>
    <columns>Registration_Id__c</columns>
    <columns>Is_Paid__c</columns>
    <columns>Actual_Paid__c</columns>
    <columns>Actual_Total__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Completely_Fulfilled__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Invoices Requiring Fulfillment</label>
</ListView>