force-app/main/default/objects/Noncredit_Invoice__c/listViews/Sponsor_Invoices_Pending_Processing.listView-meta.xml
<ListView>
    <fullName>Sponsor_Invoices_Pending_Processing</fullName>
    <columns>Contact__c</columns>
    <columns>NAME</columns>
    <columns>Invoice_Number__c</columns>
    <columns>Registration_Id__c</columns>
    <columns>Registration_Method__c</columns>
    <columns>Is_Paid__c</columns>
    <columns>Actual_Paid__c</columns>
    <columns>Actual_Total__c</columns>
    <columns>Payer_Account__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Noncredit_Only__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Is_Sponsor_Invoice__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Intended_Payment_Method__c</field>
        <operation>equals</operation>
        <value>Sponsor</value>
    </filters>
    <filters>
        <field>Is_Paid__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Is_Cancelled__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Sponsor Invoices Pending Processing</label>
</ListView>